# hemera

./: .buildconfig  .gitignore  README.md  meson.build
data/: com.github.SubhadeepJasu.hemera.appdata.xml.in  com.github.SubhadeepJasu.hemera.desktop.in  com.github.SubhadeepJasu.hemera.gresource.xml  com.github.SubhadeepJasu.hemera.gschema.xml  meson.build
data/css/: style.css
data/images/weather/: copyright
docs/: DesignLabTest.xlsx  Hemera.gv  ListOfDBUSServices.md
lib/: libhemera.deps  meson.build
lib/Models/: MycroftSettingsModel.vala
lib/Options/: Languages.vala  UnitSystems.vala
lib/Services/: Connection.vala  MessageManager.vala  MycroftSettings.vala
po/: POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  com.github.SubhadeepJasu.hemera.pot  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  (+158 more)
src/: Application.vala  Main.vala  MainWindow.vala  PreferencesWindow.vala  Settings.vala  meson.build
src/bubbles/: AppBubble.vala  EmptySpaceOverlay.vala  QnABubble.vala  SVGData.vala  SpeechBubble.vala  SwitchBoardBubble.vala  WeatherBubbleCurrent.vala
src/configs/: Constants.vala  Constants.vala.in  Settings.vala
src/core/: AppDiscovery.vala  AppEntry.vala  AppSearch.vala  LevenshteinDistanceSearch.vala  MycroftManager.vala  SwitchBoardPlugSearch.vala  Test.vala  mycroft_connection.vala
src/views/: ChatView.vala  DisplayEnclosure.vala  EnclosureFace.vala  InitSplash.vala  InstallationComplete.vala  Installer.vala  LightRingAnimator.vala  MainDynamicButton.vala  Setup.vala  Suggestion.vala  SuggestionArea.vala  SuggestionBox.vala
valacompiler/: valacompiler.options  valacompiler.test
